# ads1256C

./: .gitignore  CMakeLists.txt  README.md
include/: ads1256.h  sampler.h
src/: ads1256.c  main.c  sampler.c
